# CPP_OOP_NSU

./: .gitignore  README.md
lab0-b/: CMakeLists.txt  README.md
lab0-b/lib/: CMakeLists.txt  Reader.hpp  StringHelper.cpp  StringHelper.hpp  WordCounter.cpp  WordCounter.hpp  Writer.hpp
lab1/: CMakeLists.txt  README.md  priority_queue.hpp  tests.cpp
lab1/lib/: CMakeLists.txt  priority_queue.hpp
lab2/: CMakeLists.txt  README.md
lab2/include/Game/: AsteroidsGame.h  AudioInitializer.h
lab2/include/Game/Assets/Asteroids/: Asteroid.h  AsteroidController.h  AsteroidsManager.h
lab2/include/Game/Assets/Bullet/: Bullet.h  BulletController.h  BulletManager.h
lab2/include/Game/Assets/Player/: Player.h  PlayerController.h
lab2/include/Game/Assets/Scripts/: GameArea.h
lab2/include/Game/GameEvents/: GameEvents.h
lab2/include/Game/Scenes/: GameOverScene.h  GameSceneImpl.h  MenuScene.h  PauseScene.h  SettingsScene.h
lab2/include/GameEngine/Core/: IAudioManager.h  IClock.h  IInputEvent.h  IRenderer.h
lab2/include/GameEngine/Core/FAKE/: FakeAudioManager.h
lab2/include/GameEngine/Core/SFML/: SFMLAudioManager.h  SFMLClock.h  SFMLInputEvent.h  SFMLRenderer.h
lab2/include/GameEngine/Core/Utils/: Logger.hpp  ObjectPool.h  Observer.hpp  Vectors.h
lab2/include/GameEngine/GameObjects/: CollisionManager.h  GameScene.h  GameSceneManager.h
lab2/include/GameEngine/GameObjects/Base/: BehaviourComponent.h  Component.h  GameObject.h
lab2/include/GameEngine/GameObjects/BehaviourComponents/: ConvexShape.h  Movement.h
lab2/include/GameEngine/GameObjects/Components/: CircleCollider.h  Transform.h
lab2/include/GameEngine/UI/: Button.h  Label.h  Slider.h  UIConfig.h  UIElement.h  UIEvents.h  UIManager.h
lab2/include/core/: Controller.hpp  GameEngine.hpp  GameWorld.hpp
lab2/include/entities/: Asteroid.hpp  Bullet.hpp  Ship.hpp
lab2/include/factories/: SFMLGameObjectFactory.hpp
lab2/include/interfaces/: IDrawable.hpp  IGameObject.hpp  IGameObjectFactory.hpp  IMovable.hpp
lab2/include/utils/: Constants.hpp  Logger.hpp
lab2/src/: main.cpp
lab2/src/core/: Controller.cpp  GameEngine.cpp  GameWorld.cpp
lab2/src/entities/: Asteroid.cpp  Bullet.cpp  Ship.cpp
lab3/: CMakeLists.txt  README.md  config.txt  main.cpp
lab3/include/: config_parser.hpp  consts.hpp  converter.hpp  description_gen.hpp  exceptions.hpp  wav_file.hpp  wav_header.hpp  wav_reader.hpp
